Changing hyperlinks for live server

--- a/about/index.vi.html
+++ b/about/index.vi.html
@@ -17,7 +17,7 @@
     <img src="https://www.w3.org/2013/share-psi/bp/Flag_of_Italy.svg" alt="The Italian flag" />
     <figcaption>The true taste of Italy!</figcaption>
   </figure>
-  <p class="nav"><a href="../risotto-rice-with-mushrooms/index.vi.html">Tên sản phẩm</a> <!--| <a href="../mushroom-squash-risotto">Recipes</a> -->| Về thương hiệu Dal Giardino | <a href="../where-to-buy/index.vi.html">Nơi bán</a></p>
+  <p class="nav"><a href="../risotto-rice-with-mushrooms/index.html.vi">Tên sản phẩm</a> <!--| <a href="../mushroom-squash-risotto">Recipes</a> -->| Về thương hiệu Dal Giardino | <a href="../where-to-buy/index.html.vi">Nơi bán</a></p>
 </header>
 <section id="aboutDG">
 <h1>Về thương hiệu Dal Giardino</h1>
