--- a/risotto-rice-with-mushrooms/index.es.html
+++ b/risotto-rice-with-mushrooms/index.es.html
@@ -18,7 +18,7 @@
     <img src="https://www.w3.org/2013/share-psi/bp/Flag_of_Italy.svg" alt="The Italian flag" />
     <figcaption>The true taste of Italy!</figcaption>
   </figure>
-  <p class="nav"><a href="../extra-virgin-olive-oil/index.es.html">Productos</a> | <a href="../mushroom-squash-risotto/index.es.html">Recetas</a> | <a href="../about/index.es.html">Sobre Dal Giardino</a> | <a href="../where-to-buy/index.es.html">Donde comprar</a></p>
+  <p class="nav"><a href="../extra-virgin-olive-oil/index.html.es">Productos</a> | <a href="../mushroom-squash-risotto/index.html.es">Recetas</a> | <a href="../about/index.html.es">Sobre Dal Giardino</a> | <a href="../where-to-buy/index.html.es">Donde comprar</a></p>
 </header>
 
 <section id="product">
