--- a/risotto-rice-with-mushrooms/index.vi.html
+++ b/risotto-rice-with-mushrooms/index.vi.html
@@ -56,7 +56,7 @@
     <img src="https://www.w3.org/2013/share-psi/bp/Flag_of_Italy.svg" alt="The Italian flag" />
     <figcaption>The true taste of Italy!</figcaption>
   </figure>
-  <p class="nav"><a href="../extra-virgin-olive-oil/">Tên sản phẩm</a> | <!-- <a href="../mushroom-squash-risotto/">Công thức sản phẩm</a> |--> <a href="../about/index.vi.html">Về thương hiệu Dal Giardino</a> | <a href="../where-to-buy/index.vi.html">Nơi bán</a></p>
+  <p class="nav"><a href="../extra-virgin-olive-oil/">Tên sản phẩm</a> | <!-- <a href="../mushroom-squash-risotto/">Công thức sản phẩm</a> |--> <a href="../about/index.html.vi">Về thương hiệu Dal Giardino</a> | <a href="../where-to-buy/index.html.vi">Nơi bán</a></p>
 </header>
 
 <section id="product">
