--- a/where-to-buy/index.vi.html
+++ b/where-to-buy/index.vi.html
@@ -18,8 +18,8 @@
     <img src="https://www.w3.org/2013/share-psi/bp/Flag_of_Italy.svg" alt="The Italian flag" />
     <figcaption>The true taste of Italy!</figcaption>
   </figure>
-  <p class="nav"><a href="../risotto-rice-with-mushrooms/index.vi.html">Tên sản phẩm</a> | <!--<a href="../mushroom-squash-risotto/">Recipes</a> |-->
- <a href="../about/index.vi.html">Về thương hiệu Dal Giardino</a> | Nơi bán</p>
+  <p class="nav"><a href="../risotto-rice-with-mushrooms/index.html.vi">Tên sản phẩm</a> | <!--<a href="../mushroom-squash-risotto/">Recipes</a> |-->
+ <a href="../about/index.html.vi">Về thương hiệu Dal Giardino</a> | Nơi bán</p>
 </header>
 
 <section id="whereToBuy"><h1>Tìm mua các sản phẩm của Dal Giardino</h2>
