Adding links to JA pages

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <p>A collection of pages used to demonstrate GS1 Digital Link using the (fake) Dal Giardino brand. This is not intended to be a website in the usual sense of the word. rendered pages should be seen on <a href="https://dalgiardino.com/">dalgiardino.com</a> (which uses language negotiation) and not through github.io (which doesn't!)</p>
 <p>Product Information Pages (<a href="https://gs1.org/voc/pip">gs1:pip</a>). Links to the same page in alternative languages are in brackets.</p><ul>
-  <li><a href="risotto-rice-with-mushrooms" title="Risotto Rice with Mushrooms, 411g">Risotto Rice with Mushrooms</a> [<a href="risotto-rice-with-mushrooms/index.html.es" title="Risotto Dal Giardino Arroz con Champiñones 411g">ES</a>] [<a href="risotto-rice-with-mushrooms/index.html.vi" title="Cơm Risotto với nấm hãng Dal Giardino 411g">VI</a>]</li>
-  <li><a href="extra-virgin-olive-oil/">Extra virgin olive oil</a> [<a href="extra-virgin-olive-oil/index.html.es" title="Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L">ES</a>]</li>
+  <li><a href="risotto-rice-with-mushrooms" title="Risotto Rice with Mushrooms, 411g">Risotto Rice with Mushrooms</a> [<a href="risotto-rice-with-mushrooms/index.html.es" title="Risotto Dal Giardino Arroz con Champiñones 411g">ES</a>] [<a href="risotto-rice-with-mushrooms/index.html.vi" title="Cơm Risotto với nấm hãng Dal Giardino 411g">VI</a>] [<a href="risotto-rice-with-mushrooms/index.html.ja">JA</a>]</li>
+  <li><a href="extra-virgin-olive-oil/">Extra virgin olive oil</a> [<a href="extra-virgin-olive-oil/index.html.es" title="Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L">ES</a>] [<a href="extra-virgin-olive-oil/index.html.ja">JA</a>]</li>
   <li><a href="medicinal-compound/">Medicinal compound</a></li>
 </ul>
 
 <p>Recipe information (<a href="https://gs1.org/voc/recipeInfo">gs1:recipeInfo</a>)</p><ul>
-  <li><a href="mushroom-squash-risotto">Wild mushroom risotto with ham and roasted butternut squash</a> [<a href="mushroom-squash-risotto/index.html.es" title="Risotto de champiñones y calabaza">ES</a>]</li>
+  <li><a href="mushroom-squash-risotto">Wild mushroom risotto with ham and roasted butternut squash</a> [<a href="mushroom-squash-risotto/index.html.es" title="Risotto de champiñones y calabaza">ES</a>] [<a href="mushroom-squash-risotto/index.html.ja" title="キノコと砕いたバターナッツ入りのリゾット">JA</a>]</li>
 </ul>
 
 <p>Retailers (<a href="https://gs1.org/voc/hasRetailers">gs1:hasRetailers</a>)</p><ul>
