--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>Product Information Pages (<a href="https://gs1.org/voc/pip">gs1:pip</a>). Links to the same page in alternative languages are in brackets.</p><ul>
   <li><a href="risotto-rice-with-mushrooms" title="Risotto Rice with Mushrooms, 411g">Risotto Rice with Mushrooms</a> [<a href="risotto-rice-with-mushrooms/index.html.es" title="Risotto Dal Giardino Arroz con Champiñones 411g">ES</a>] [<a href="risotto-rice-with-mushrooms/index.html.vi" title="Cơm Risotto với nấm hãng Dal Giardino 411g">VI</a>] [<a href="risotto-rice-with-mushrooms/index.html.ja">JA</a>]</li>
   <li><a href="extra-virgin-olive-oil/">Extra virgin olive oil</a> [<a href="extra-virgin-olive-oil/index.html.es" title="Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L">ES</a>] [<a href="extra-virgin-olive-oil/index.html.ja">JA</a>]</li>
-  <li><a href="medicinal-compound/">Medicinal compound</a> [<a href="medicinal-compound/index.html.ja">Medicinal compound</a>JA</a>]</li>
+  <li><a href="medicinal-compound/">Medicinal compound</a> [<a href="medicinal-compound/index.html.ja">JA</a>]</li>
 </ul>
 
 <p>Recipe information (<a href="https://gs1.org/voc/recipeInfo">gs1:recipeInfo</a>)</p><ul>
