Improving sub-pages

--- a/risotto-rice-with-mushrooms/ABC/123/index.html
+++ b/risotto-rice-with-mushrooms/ABC/123/index.html
@@ -21,24 +21,18 @@
   <p class="nav"><a href="https://dalgiardino.com/extra-virgin-olive-oil/">Products</a> | <a href="https://dalgiardino.com/mushroom-squash-risotto/">Recipes</a> | <a href="https://dalgiardino.com/about/">About Dal Giardino</a> | <a href="https://dalgiardino.com/where-to-buy/">Where to Buy</a></p>
 </header>
 
-<section id="product">
+<section>
 
-<figure>
-  <img src="https://philarcher.org/gs1/mrhi/2018-07-24/Dal_Giardino_Risotto_Rice_With_Nett_260.png" alt="Packshot of Dal Giardino Risotto Rice with Mushrooms" />
+<figure style="float:left">
+  <img src="mathilda.jpg" alt="Young woman, seen sideways on in the kitchen, smiling."style="width:300px; max-width:100%; margin: .3em" />
+  <figcaption style="font-size:8pt; text-align:center"><a href="https://flic.kr/p/aXBNKV">Smile</a> by <a href="https://www.flickr.com/photos/ericsonshots/">Michael Ericson</a> <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">cc-by-nc-nd Some rights reserved</a></figcaption>
 </figure>
 
-<div id="productText">
-  <p class="title">Dal Giardino Risotto Rice with Mushrooms<span id="titleNetWeight"> 411g</span></p>
-  <p class="description"><span class="long">A delicious mix of f</span><span class="short">F</span>ragrant rice with Italian mushrooms</p>
+  <p style="font-weight:bold">Dal Giardino Risotto Rice with Mushrooms<span id="titleNetWeight"> 411g</span></p>
 
   <p>Pack number 123 is a very special pack of <em>Dal Giardino Risotto Rice with Mushrooms</em> that was hand crafted by Mathilda's team on the morning of Tuesday 5th May 2020. 
     You can see their signatures on the back of the pack. Mathilda remarked "I remember that morning as we had to wait until gone 10 o'clock
     for the fresh mushrooms to arrive."</p>
-
-</div>
-
-
-
 
 </section>
 
