--- a/risotto-rice-with-mushrooms/ABC/index.html
+++ b/risotto-rice-with-mushrooms/ABC/index.html
@@ -21,22 +21,14 @@
   <p class="nav"><a href="https://dalgiardino.com/extra-virgin-olive-oil/">Products</a> | <a href="https://dalgiardino.com/mushroom-squash-risotto/">Recipes</a> | <a href="https://dalgiardino.com/about/">About Dal Giardino</a> | <a href="https://dalgiardino.com/where-to-buy/">Where to Buy</a></p>
 </header>
 
-<section id="product">
+<section>
 
-<figure>
-  <img src="https://philarcher.org/gs1/mrhi/2018-07-24/Dal_Giardino_Risotto_Rice_With_Nett_260.png" alt="Packshot of Dal Giardino Risotto Rice with Mushrooms" />
+<figure style="float:left">
+  <img src="forklift.png" alt="A woman steering a pallet of goods in a factory" style="width:300px; max-width:100%; margin: .3em" />
 </figure>
 
-<div id="productText">
-  <p class="title">Dal Giardino Risotto Rice with Mushrooms<span id="titleNetWeight"> 411g</span></p>
-  <p class="description"><span class="long">A delicious mix of f</span><span class="short">F</span>ragrant rice with Italian mushrooms</p>
-
+  <p style="font-weight:bold">Dal Giardino Risotto Rice with Mushrooms<span id="titleNetWeight"> 411g</span></p>
   <p>This batch of Dal Giardino Risotto Rice with Mushrooms, batch ABC, was created in our principal factory in Erehwon.</p>
-
-</div>
-
-
-
 
 </section>
 
