Adding structured data

--- a/risotto-rice-with-mushrooms/index.html
+++ b/risotto-rice-with-mushrooms/index.html
@@ -5,6 +5,68 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../dgstyle.css" type="text/css" />
   <title>Dal Giardino Risotto Rice with Mushrooms</title>
+  <script type="application/ld+json">
+  {
+    "@context": {
+        "gs1": "http://gs1.org/voc/",
+        "s": "https://schema.org/",
+        "xsd": "http://www.w3.org/2001/XMLSchema#",
+        "@vocab": "http://gs1.org/voc/"
+    },
+    "@type": [
+        "gs1:FoodBeverageTobaccoProduct",
+        "s:Product"
+    ],
+    "@id": "https://dalgiardino.com/risotto-rice-with-mushrooms/",
+    "s:name": [
+        {
+            "@value": " Dal Giardino Risotto Rice with Mushrooms 411g",
+            "@language": "en"
+        }
+    ],
+    "gtin": "09506000134352",
+    "s:brand": {
+        "@id": "Dal Giardino"
+    },
+    "s:description": [
+        {
+            "@value": "An entirely fictitious produce used in GS1 documentation",
+            "@language": "en"
+        }
+    ],
+    "productMarketingMessage": [
+        {
+            "@value": "A delicious mix of fragrant rice with Italian mushrooms",
+            "@language": "en"
+        }
+    ],
+    "s:image": {
+        "s:width": {
+            "@value": "260",
+            "@type": "xsd:integer"
+        },
+        "s:height": {
+            "@value": "260",
+            "@type": "xsd:integer"
+        },
+        "s:url": {
+            "@id": "https://philarcher.org/gs1/mrhi/2018-07-24/Dal_Giardino_Risotto_Rice_With_Nett_260.png"
+        },
+        "@type": [
+            "gs1:ReferencedFileDetails",
+            "s:MediaObject"
+        ]
+    },
+    "s:manufacturer": {
+        "@id": "GS1"
+    },
+    "isProductRecalled": {
+        "@value": "false",
+        "@type": "xsd:boolean"
+    }
+}
+  </script>
+  
   <style>
 
   </style>
