--- a/extra-virgin-olive-oil/index.es.html
+++ b/extra-virgin-olive-oil/index.es.html
@@ -5,6 +5,67 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../dgstyle.css" type="text/css" />
   <title>Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L</title>
+  <script type="application/ld+json">
+  {
+    "@context": {
+        "gs1": "http://gs1.org/voc/",
+        "s": "https://schema.org/",
+        "xsd": "http://www.w3.org/2001/XMLSchema#",
+        "@vocab": "http://gs1.org/voc/"
+    },
+    "@type": [
+        "gs1:FoodBeverageTobaccoProduct",
+        "s:Product"
+    ],
+    "@id": "https://id.gs1.org/01/09506000134369",
+    "s:name": [
+        {
+            "@value":Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L",
+            "@language": "es"
+        }
+    ],
+    "gtin": "09506000134369",
+    "s:brand": {
+        "@id": "Dal Giardino"
+    },
+    "s:description": [
+        {
+            "@value": "An entirely fictitious product used in GS1 documentation",
+            "@language": "en"
+        }
+    ],
+    "productMarketingMessage": [
+        {
+            "@value": "Parte de nuestra gama exclusiva , este aceite de oliva virgen extra de extracción en frío es el mejor de nuestra gama y la esencia de una experiencia italiana memorable.",
+            "@language": "es"
+        }
+    ],
+    "s:image": {
+        "s:width": {
+            "@value": "254",
+            "@type": "xsd:integer"
+        },
+        "s:height": {
+            "@value": "994",
+            "@type": "xsd:integer"
+        },
+        "s:url": {
+            "@id": "https://dalgiardino.com/extra-virgin-olive-oil/OilPackShot.png"
+        },
+        "@type": [
+            "gs1:ReferencedFileDetails",
+            "s:MediaObject"
+        ]
+    },
+    "s:manufacturer": {
+        "@id": "GS1"
+    },
+    "isProductRecalled": {
+        "@value": "false",
+        "@type": "xsd:boolean"
+    }
+}
+  </script>
   <style>
     section#product p.description {
       top:6em;
