Adding structured data

--- a/extra-virgin-olive-oil/index.ja.html
+++ b/extra-virgin-olive-oil/index.ja.html
@@ -5,6 +5,67 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../dgstyle.css" type="text/css" />
   <title>Dal Giardino Extra Virgin Olive Oil Exclusive Selection 1L</title>
+  <script type="application/ld+json">
+  {
+    "@context": {
+        "gs1": "http://gs1.org/voc/",
+        "s": "https://schema.org/",
+        "xsd": "http://www.w3.org/2001/XMLSchema#",
+        "@vocab": "http://gs1.org/voc/"
+    },
+    "@type": [
+        "gs1:FoodBeverageTobaccoProduct",
+        "s:Product"
+    ],
+    "@id": "https://id.gs1.org/01/09506000134369",
+    "s:name": [
+        {
+            "@value":Dal Giardino Extra Virgin Olive Oil Exclusive Selection 1L",
+            "@language": "en"
+        }
+    ],
+    "gtin": "09506000134369",
+    "s:brand": {
+        "@id": "Dal Giardino"
+    },
+    "s:description": [
+        {
+            "@value": "An entirely fictitious product used in GS1 documentation",
+            "@language": "en"
+        }
+    ],
+    "productMarketingMessage": [
+        {
+            "@value": "低温抽出技術で作り出された弊社のエクストラ・バージン・オリーブオイルは、とても上質な製品ですので、お客様のイタリアン料理の時間を掛け替えのないものにしてくれるでしょう。",
+            "@language": "ja"
+        }
+    ],
+    "s:image": {
+        "s:width": {
+            "@value": "254",
+            "@type": "xsd:integer"
+        },
+        "s:height": {
+            "@value": "994",
+            "@type": "xsd:integer"
+        },
+        "s:url": {
+            "@id": "https://dalgiardino.com/extra-virgin-olive-oil/OilPackShot.png"
+        },
+        "@type": [
+            "gs1:ReferencedFileDetails",
+            "s:MediaObject"
+        ]
+    },
+    "s:manufacturer": {
+        "@id": "GS1"
+    },
+    "isProductRecalled": {
+        "@value": "false",
+        "@type": "xsd:boolean"
+    }
+}
+  </script>
 
   <style>
     section#product p.description {
