produce/product typo in structured data

--- a/risotto-rice-with-mushrooms/index.es.html
+++ b/risotto-rice-with-mushrooms/index.es.html
@@ -30,7 +30,7 @@
     },
     "s:description": [
         {
-            "@value": "An entirely fictitious produce used in GS1 documentation",
+            "@value": "An entirely fictitious product used in GS1 documentation",
             "@language": "en"
         }
     ],
