--- a/extra-virgin-olive-oil/index.es.html
+++ b/extra-virgin-olive-oil/index.es.html
@@ -20,7 +20,7 @@
     "@id": "https://id.gs1.org/01/09506000134369",
     "s:name": [
         {
-            "@value":Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L",
+            "@value":"Dal Giardino Aceite de Oliva Virgen Extra Selección Exclusiva 1L",
             "@language": "es"
         }
     ],
