--- a/extra-virgin-olive-oil/index.ja.html
+++ b/extra-virgin-olive-oil/index.ja.html
@@ -20,7 +20,7 @@
     "@id": "https://id.gs1.org/01/09506000134369",
     "s:name": [
         {
-            "@value":Dal Giardino Extra Virgin Olive Oil Exclusive Selection 1L",
+            "@value":"Dal Giardino Extra Virgin Olive Oil Exclusive Selection 1L",
             "@language": "en"
         }
     ],
