--- a/extra-virgin-olive-oil/index.es.html
+++ b/extra-virgin-olive-oil/index.es.html
@@ -25,9 +25,11 @@
         }
     ],
     "gtin": "09506000134369",
-    "s:brand": {
-        "@id": "Dal Giardino"
+        "s:brand": {
+        "@id": "https://dalgiardino.com/",
+        "s:name": "Dal Giardino"
     },
+
     "s:description": [
         {
             "@value": "An entirely fictitious product used in GS1 documentation",
