--- a/extra-virgin-olive-oil/index.html
+++ b/extra-virgin-olive-oil/index.html
@@ -61,7 +61,7 @@
     },
     "s:manufacturer": {
         "@id": "https://www.gs1.org/",
-        "s:name" : "GS1"
+        "s:name" : "GS1",
         "@type": "https://schema.org/Consortium"
     },
     "isProductRecalled": {
