--- a/risotto-rice-with-mushrooms/index.html
+++ b/risotto-rice-with-mushrooms/index.html
@@ -61,7 +61,7 @@
     },
     "s:manufacturer": {
         "@id": "https://www.gs1.org/",
-        "s:name" : "GS1"
+        "s:name" : "GS1",
         "@type": "https://schema.org/Consortium"
     },
     "isProductRecalled": {
