Fixing image size

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -26,7 +26,7 @@
 
 <section>
 <figure id="delivery" style="width:567px; max-width:100%; display:block; margin:0 auto">
-    <img src="delivery.jpg" alt="A motorbike courier seen from above travelling at speed">
+    <img src="delivery.jpg" alt="A motorbike courier seen from above travelling at speed" style="width:100%">
     <figcaption style="font-size:8px"><a href="https://flic.kr/p/6ARZNG">Delivering</a> by <a href="https://www.flickr.com/photos/polifemus/">Gonzalo Viera Azpiroz</a> cc <a href="https://creativecommons.org/licenses/by-nc/2.0/">by-nc</a></figcaption>
 </figure>
 <p>Your Dal Giardino order is out for delivery and will be with you soon!</p>
