Adding gluten free cert

--- a/risotto-rice-with-mushrooms/index.html
+++ b/risotto-rice-with-mushrooms/index.html
@@ -25,6 +25,7 @@
         }
     ],
     "gtin": "09506000134352",
+    "s:gtin": "09506000134352",
     "s:brand": {
         "@id": "https://dalgiardino.com/",
         "s:name": "Dal Giardino",
@@ -52,7 +53,7 @@
             "@type": "xsd:integer"
         },
         "s:url": {
-            "@id": "https://philarcher.org/gs1/mrhi/2018-07-24/Dal_Giardino_Risotto_Rice_With_Nett_260.png"
+            "@id": "https://gs1.github.io/dalgiardino/risotto-rice-with-mushrooms/Dal_Giardino_Risotto_Rice_With_Nett_260.png"
         },
         "@type": [
             "gs1:ReferencedFileDetails",
@@ -75,8 +76,10 @@
 
   </style>
 </head>
+
 <body>
 <header>
+
   <a href="../"><img src="../dglogo.png" alt="Dal Giardino logo" id="logo" /></a>
 <!--  <img src="MadeInItaly.jpg" alt="The words Made in Italy styled into a rosette in Italian flag colours" id="mii"/> -->
 
@@ -97,7 +100,7 @@
   <p class="title">Dal Giardino Risotto Rice with Mushrooms<span id="titleNetWeight"> 411g</span></p>
   <p class="description"><span class="long">A delicious mix of f</span><span class="short">F</span>ragrant rice with Italian mushrooms</p>
 
-  <p class="goodStuff"><span id="gluten">Gluten free</span> <span id="vegetarian">Vegetarian</span> <span id="vegan">Vegan</span></p>
+  <p class="goodStuff"><span id="gluten"><a href="gfCert.html">Gluten free</a></span> <span id="vegetarian">Vegetarian</span> <span id="vegan">Vegan</span></p>
 
   <p class="linkGraphic"><span id="recipes">RECIPES</span> <span id="howToCook">HOW TO COOK</span> <span id="smartLabel">SmartLabel&trade;</span></p>
 
