Moved image (finally!)

--- a/risotto-rice-with-mushrooms/index.html
+++ b/risotto-rice-with-mushrooms/index.html
@@ -93,7 +93,7 @@
 <section id="product">
 
 <figure>
-  <img src="https://philarcher.org/gs1/mrhi/2018-07-24/Dal_Giardino_Risotto_Rice_With_Nett_260.png" alt="Packshot of Dal Giardino Risotto Rice with Mushrooms" />
+  <img src="Dal_Giardino_Risotto_Rice_With_Nett_260.png" alt="Packshot of Dal Giardino Risotto Rice with Mushrooms" />
 </figure>
 
 <div id="productText">
